--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,1 @@
-# EditorConfig helps developers define and maintain consistent
-# coding styles between different editors and IDEs
-# http://editorconfig.org
-
-root = true
-
-[*.*]
-
-# Change these settings to your own preference
-indent_style = tab
-indent_size = 4
-
-# We recommend you to keep these unchanged
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
-
-[*.md]
-trim_trailing_whitespace = false
+node_modules/ir-starter-kit/.editorconfig
