--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
-  "name": "ir-starter-kit",
-  "version": "0.1.0",
-  "description": "Starter kit for creating modern web applications",
-  "main": "index.js ",
+  "name": "dev-build",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "install": "node bin/install.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/inrhythm/ir-starter-kit.git"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/inrhythm/ir-starter-kit/issues"
-  },
-  "homepage": "https://github.com/inrhythm/ir-starter-kit",
-  "dependencies": {
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^0.23.0",
+    "eslint-loader": "^0.14.0",
     "gulp": "^3.9.0",
-    "gulp-webpack-build": "^0.11.1",
-    "minimist": "^1.1.1",
-    "run-sequence": "^1.1.0"
+    "ir-starter-kit": "^0.1.0"
   }
 }
